--- a/app/src/main/res/layout/fragment_rate_plan_bar.xml
+++ b/app/src/main/res/layout/fragment_rate_plan_bar.xml
@@ -98,7 +98,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/roboto_medium"
-                        android:paddingVertical="5dp"
+                        android:layout_marginTop="10dp"
                         android:text="Rate Plan Details"
                         android:textAlignment="center"
                         android:textColor="@color/secondary"
@@ -110,6 +110,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:weightSum="4"
+                        android:layout_marginTop="10dp"
                         android:orientation="horizontal">
 
                         <com.google.android.material.textfield.TextInputLayout
@@ -196,7 +197,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/roboto_medium"
-                            android:layout_marginTop="15dp"
+                            android:layout_marginTop="20dp"
                             android:text="Inclusions and Charges"
                             android:textAlignment="center"
                             android:textColor="@color/secondary"
@@ -476,6 +477,7 @@
                                 android:fontFamily="@font/roboto_medium"
                                 android:text="Bar Rate Breakdown"
                                 android:textAlignment="center"
+                                android:layout_marginTop="10dp"
                                 android:textColor="@color/secondary"
                                 android:textSize="@dimen/H4"
                                 app:layout_constraintStart_toStartOf="parent"
@@ -581,7 +583,7 @@
                                 <androidx.cardview.widget.CardView
                                     android:id="@+id/rateCard"
                                     style="@style/CardViewTheme"
-                                    android:layout_width="wrap_content"
+                                    android:layout_width="0dp"
                                     android:layout_height="wrap_content"
                                     android:layout_weight="1"
                                     android:layout_marginVertical="4dp"
