--- a/app/src/main/res/layout/fragment_rate_plan_company.xml
+++ b/app/src/main/res/layout/fragment_rate_plan_company.xml
@@ -541,7 +541,7 @@
                             <androidx.cardview.widget.CardView
                                 android:id="@+id/rateCard"
                                 style="@style/CardViewTheme"
-                                android:layout_width="wrap_content"
+                                android:layout_width="0dp"
                                 android:layout_height="wrap_content"
                                 android:layout_weight="1"
                                 android:layout_marginVertical="4dp"
