--- a/app/src/main/res/layout/fragment_rate_plan_package.xml
+++ b/app/src/main/res/layout/fragment_rate_plan_package.xml
@@ -58,7 +58,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/roboto_medium"
-                    android:paddingVertical="5dp"
+                    android:layout_marginTop="10dp"
                     android:text="Rate Plan Details"
                     android:textAlignment="center"
                     android:textColor="@color/secondary"
@@ -70,7 +70,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:weightSum="4"
-                    android:layout_marginTop="5dp"
+                    android:layout_marginTop="15dp"
                     android:layout_gravity="center_vertical"
                     android:gravity="center_vertical"
                     android:orientation="horizontal">
@@ -274,7 +274,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/roboto_medium"
-                        android:paddingVertical="11dp"
+                        android:layout_marginTop="25dp"
                         android:text="Rate Plan Inclusions and Charges"
                         android:textAlignment="center"
                         android:textColor="@color/secondary"
@@ -282,19 +282,34 @@
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
 
-                    <TextView
+                    <androidx.cardview.widget.CardView
                         android:id="@+id/add_name"
+                        style="@style/CardViewTheme"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_height="40dp"
                         android:layout_marginEnd="30dp"
-                        android:fontFamily="@font/roboto_medium"
-                        android:paddingVertical="11dp"
-                        android:text="+Add Plan Inclusions"
-                        android:textAlignment="center"
-                        android:textColor="@color/secondary"
-                        android:textSize="@dimen/H4"
+                        android:clickable="true"
+                        android:focusable="true"
+                        app:cardBackgroundColor="@color/black"
+                        app:cardCornerRadius="10dp"
+                        app:cardElevation="4dp"
                         app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
+                        app:layout_constraintBottom_toBottomOf="@id/charges_head"
+                        app:layout_constraintTop_toTopOf="@id/charges_head" >
+
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:fontFamily="@font/roboto_medium"
+                            android:paddingVertical="8dp"
+                            android:paddingHorizontal="10dp"
+                            android:text="+ Add Inclusions"
+                            android:textAlignment="center"
+                            android:textColor="@color/white"
+                            android:textSize="@dimen/H5"/>
+
+                    </androidx.cardview.widget.CardView>
 
                     <androidx.cardview.widget.CardView
                         android:id="@+id/c2"
@@ -302,7 +317,7 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_marginHorizontal="2dp"
-                        android:layout_marginBottom="9dp"
+                        android:layout_marginTop="9dp"
                         app:cardBackgroundColor="@color/secondaryBackground"
                         app:cardCornerRadius="9dp"
                         app:cardElevation="2dp"
@@ -528,7 +543,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/roboto_medium"
-                        android:paddingVertical="15dp"
+                        android:layout_marginTop="20dp"
                         android:text="Package Rate Adjustment"
                         android:textAlignment="center"
                         android:textColor="@color/secondary"
