--- a/app/src/main/res/layout/fragment_add_images.xml
+++ b/app/src/main/res/layout/fragment_add_images.xml
@@ -85,6 +85,7 @@
                 android:layout_marginTop="10dp"
                 android:layout_marginStart="5dp"
                 app:cardElevation="2dp"
+                android:visibility="gone"
                 app:layout_constraintCircleRadius="10dp"
                 android:layout_marginEnd="10dp"
                 app:cardCornerRadius="5dp"
