--- a/app/src/main/res/layout/fragment_add_room_type.xml
+++ b/app/src/main/res/layout/fragment_add_room_type.xml
@@ -747,6 +747,7 @@
                         android:layout_height="wrap_content"
                         style="@style/CardViewTheme"
                         android:layout_marginTop="10dp"
+                        android:layout_marginBottom="5dp"
                         android:layout_marginHorizontal="20dp"
                         app:cardCornerRadius="10dp"
                         app:cardElevation="2dp">
@@ -811,6 +812,7 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/frame2"
             android:layout_width="0dp"
+            android:visibility="invisible"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toEndOf="@id/frame1"
