--- a/app/src/main/res/layout/fragment_mapping.xml
+++ b/app/src/main/res/layout/fragment_mapping.xml
@@ -6,72 +6,19 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".dashboard.channelManager.ChannelsManagement.MappingFragment">
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/card"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:cardBackgroundColor="#E6ECF5">
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-            <TextView
-                android:id="@+id/txt_deluxe"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                android:layout_marginStart="9dp"
-                android:layout_marginTop="6dp"
-                android:textSize="@dimen/H4"
-                android:textColor="@color/secondary"
-                android:fontFamily="@font/roboto_medium"
-                android:text="Deluxe Room"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toEndOf="@id/txt_deluxe"
-                android:layout_marginStart="6dp"
-                android:layout_marginTop="6dp"
-                android:textSize="@dimen/H5"
-                android:textColor="@color/skyBlue"
-                android:fontFamily="@font/roboto_medium"
-                android:text="Map Room"/>
-            <androidx.constraintlayout.widget.Guideline
-                android:id="@+id/guide"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                app:layout_constraintGuide_percent=".3"/>
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="@id/guide"
-                android:textSize="@dimen/H4"
-                android:textColor="@color/secondary"
-                android:text="Base Occ."/>
-
-
-
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-    </androidx.cardview.widget.CardView>
 
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycler_room_type"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/card"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="20dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="19dp"
+        tools:listitem="@layout/item_recycler_room_type"
+        android:layout_marginTop="14dp"
         />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
