--- a/app/src/main/res/layout/fragment_logs_and_activity.xml
+++ b/app/src/main/res/layout/fragment_logs_and_activity.xml
@@ -1,14 +1,243 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".dashboard.channelManager.ChannelsManagement.LogsAndActivityFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+<!--    <androidx.constraintlayout.widget.ConstraintLayout-->
+<!--        android:id="@+id/c1"-->
+<!--        android:layout_width="0.2dp"-->
+<!--        android:layout_height="100dp"-->
+<!--        android:background="@color/black"-->
+<!--        app:layout_constraintTop_toTopOf="parent"-->
+<!--        app:layout_constraintBottom_toBottomOf="parent"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintEnd_toStartOf="@id/c2"/>-->
+<!--    <androidx.constraintlayout.widget.ConstraintLayout-->
+<!--        android:id="@+id/c2"-->
+<!--        android:layout_width="0.8dp"-->
+<!--        android:layout_height="100dp"-->
+<!--        android:background="@color/skyBlue"-->
+<!--        app:layout_constraintTop_toTopOf="parent"-->
+<!--        app:layout_constraintBottom_toBottomOf="parent"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintStart_toEndOf="@id/c1"/>-->
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:weightSum="4"
+        android:orientation="horizontal"
+        app:layout_constraintTop_toTopOf="parent">
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1.3"
+            android:layout_marginTop="12dp"
+            android:orientation="vertical">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Channel Logs"
+                android:textSize="@dimen/H4"
+                android:layout_margin="9dp"
+                android:fontFamily="@font/roboto_medium"
+                android:textColor="@color/black"/>
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recycler_channel_logs"
+                android:layout_width="match_parent"
+                android:layout_marginHorizontal="9dp"
+                tools:listitem="@layout/item_recycler_channel_logs"
+                android:layout_height="wrap_content"/>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="2.7"
+            android:orientation="vertical"
+            android:layout_marginTop="12dp">
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+            <TextView
+                android:id="@+id/txt_channel"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                android:text="Bookings"
+                android:textSize="@dimen/H4"
+                android:layout_margin="9dp"
+                android:fontFamily="@font/roboto_medium"
+                android:textColor="@color/black"/>
 
-</FrameLayout>
+            <com.google.android.material.card.MaterialCardView
+                android:id="@+id/card_icon"
+                android:layout_width="270dp"
+                android:layout_height="40dp"
+                app:strokeWidth="0.5dp"
+                app:strokeColor="#EBEBEB"
+                app:layout_constraintTop_toTopOf="@id/txt_channel"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:cardElevation="1dp"
+                android:layout_marginEnd="12dp"
+                app:cardBackgroundColor="#FDFDFD"
+                android:outlineSpotShadowColor="@color/dark_grey"
+                >
+
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    >
+
+                    <ImageView
+                        android:id="@+id/search_icon"
+                        android:layout_width="25dp"
+                        android:layout_height="25dp"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        android:src="@drawable/search_icon"
+                        android:layout_marginEnd="10dp"
+                        />
+
+                    <EditText
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        android:background="#FDFDFD"
+                        android:hint="Search here"
+                        android:layout_marginStart="10dp"
+                        android:textSize="@dimen/H4"
+                        android:fontFamily="@font/roboto"
+                        android:textFontWeight="200"
+                        android:textColor="#7B7F80"
+                        />
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+            </com.google.android.material.card.MaterialCardView>
+
+                <androidx.constraintlayout.widget.Guideline
+                    android:id="@+id/g1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintGuide_percent="0.17"
+                    android:orientation="vertical"/>
+                <androidx.constraintlayout.widget.Guideline
+                    android:id="@+id/g2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintGuide_percent="0.35"
+                    android:orientation="vertical"/>
+                <androidx.constraintlayout.widget.Guideline
+                    android:id="@+id/g3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintGuide_percent="0.52"
+                    android:orientation="vertical"/>
+                <androidx.constraintlayout.widget.Guideline
+                    android:id="@+id/g4"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintGuide_percent=".68"
+                    android:orientation="vertical"/>
+                <androidx.constraintlayout.widget.Guideline
+                    android:id="@+id/g5"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintGuide_percent="0.86"
+                    android:orientation="vertical"/>
+
+                <TextView
+                    android:id="@+id/txt_id"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/card_icon"
+                    android:layout_marginTop="12dp"
+                    android:layout_marginStart="9dp"
+                    android:textSize="@dimen/H6"
+                    android:fontFamily="@font/roboto_medium"
+                    android:textColor="@color/secondary"
+                    android:text="Reservetion ID"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintStart_toStartOf="@id/g1"
+                    app:layout_constraintTop_toBottomOf="@id/card_icon"
+                    android:layout_marginTop="12dp"
+                    android:fontFamily="@font/roboto_medium"
+                    android:textSize="@dimen/H6"
+                    android:textColor="@color/secondary"
+                    android:text="Guest Name"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintStart_toStartOf="@id/g2"
+                    app:layout_constraintTop_toBottomOf="@id/card_icon"
+                    android:layout_marginTop="12dp"
+                    android:textSize="@dimen/H6"
+                    android:fontFamily="@font/roboto_medium"
+                    android:textColor="@color/secondary"
+                    android:text="Booking Date"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintStart_toStartOf="@id/g3"
+                    app:layout_constraintTop_toBottomOf="@id/card_icon"
+                    android:layout_marginTop="12dp"
+                    android:fontFamily="@font/roboto_medium"
+                    android:textSize="@dimen/H6"
+                    android:textColor="@color/secondary"
+                    android:text="Arrival"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintStart_toStartOf="@id/g4"
+                    app:layout_constraintTop_toBottomOf="@id/card_icon"
+                    android:layout_marginTop="12dp"
+                    android:textSize="@dimen/H6"
+                    android:textColor="@color/secondary"
+                    android:text="Departure"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintStart_toStartOf="@id/g5"
+                    app:layout_constraintTop_toBottomOf="@id/card_icon"
+                    android:layout_marginTop="12dp"
+                    android:textSize="@dimen/H6"
+                    android:textColor="@color/secondary"
+                    android:text="Total"/>
+
+                <View
+                    android:id="@+id/l"
+                    android:layout_width="match_parent"
+                    android:layout_height="0.5dp"
+                    android:background="@color/lightBlack"
+                    app:layout_constraintTop_toBottomOf="@id/txt_id"
+                    android:layout_margin="9dp"/>
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recycler_bookings"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_marginBottom="16dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                tools:listitem="@layout/item_recycler_bookings_logs"
+                app:layout_constraintTop_toBottomOf="@id/l"/>
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+        </LinearLayout>
+
+    </LinearLayout>
+
+
+
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
